--- a/Day 14/BankingForm2.html
+++ b/Day 14/BankingForm2.html
@@ -4,7 +4,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: white;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
@@ -13,7 +13,7 @@
         .container {
             max-width: 600px;
             margin: 20px auto;
-            background-color: #fff;
+            background-color: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -34,14 +34,14 @@
             width: 100%;
             padding: 10px;
             margin-bottom: 20px;
-            border: 1px solid #ccc;
+            border: 1px solid rgb(0, 0, 0);
             border-radius: 4px;
             box-sizing: border-box;
         }
 
         input[type="submit"] {
-            background-color: #007bff;
-            color: #fff;
+            background-color: rgb(0, 162, 255);
+            color: white;
             border: none;
             padding: 12px 20px;
             border-radius: 4px;
@@ -49,7 +49,7 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #0056b3;
+            background-color:  rgb(0, 162, 255);
         }
     </style>
 </head>
